--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity
             android:name=".DeviceList"
             android:label="@string/app_name" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +22,7 @@
         </activity>
         <activity
             android:name=".ledControl"
-            android:label="LED Control" >
+            android:label="LED Lamp Control" >
         </activity>
     </application>
 
